# ats2-itp-rootfinder

./: Makefile.am  Makefile.in  README  aminclude_static.am  ats2-itp-rootfinder.pc.in  configure  configure.ac
itp-rootfinder/CATS/: itp-rootfinder.cats
itp-rootfinder/DATS/: itp-rootfinder.dats
itp-rootfinder/HATS/: itp-rootfinder.hats
itp-rootfinder/SATS/: itp-rootfinder.sats
tests/: test1.dats  test2.dats
